--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/eslint-config": "^1.1.0",
     "expo": "~41.0.1",
     "expo-updates": "~0.5.4",
     "expo-splash-screen": "~0.10.2",
@@ -24,8 +25,17 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "babel-preset-expo": "~8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.1-alpha.7",
+    "babel-preset-expo": "~8.3.0","eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest-expo": "~41.0.0",
+    "prettier": "^2.2.1",
     "typescript": "~4.0.0"
   },
   "jest": {
