--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/ibm-plex-sans": "^0.2.0",
     "@react-native-community/eslint-config": "^1.1.0",
     "expo": "~41.0.1",
-    "expo-updates": "~0.5.4",
+    "expo-app-loading": "^1.1.2",
     "expo-splash-screen": "~0.10.2",
+    "expo-updates": "~0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -19,15 +21,18 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.1-alpha.7",
-    "babel-preset-expo": "~8.3.0","eslint": "^7.23.0",
+    "babel-preset-expo": "~8.3.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
