--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@expo-google-fonts/ibm-plex-sans": "^0.2.0",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.x",
+    "@react-navigation/stack": "5.x",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-splash-screen": "~0.10.2",
@@ -19,6 +22,8 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
