--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "5.x",
     "@react-navigation/stack": "5.x",
+    "axios": "^0.21.4",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-splash-screen": "~0.10.2",
