--- a/package.json
+++ b/package.json
@@ -11,30 +11,35 @@
     "@expo-google-fonts/ibm-plex-sans": "^0.2.0",
     "@react-native-community/eslint-config": "^1.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/native": "5.x",
     "@react-navigation/stack": "5.x",
-    "axios": "^0.21.4",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-location": "~12.0.4",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.7.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.1-alpha.7",
     "babel-preset-expo": "~8.3.0",
